--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.25.0",
     "react": "^17.0.2",
     "react-cookie": "^4.1.1",
+    "react-datetime-picker": "^3.4.3",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
