--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "axios": "^0.25.0",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-cookie": "^4.1.1",
     "react-datetime-picker": "^3.4.3",
     "react-dom": "^17.0.2",
+    "react-moment": "^1.1.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-toastify": "^8.1.0",
